Fix footer and spacing of lists

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 
 @import "minima";
 
-p {
+p, span, ul, ol {
   line-height: 30px;
 }
 
